--- a/pom.xml
+++ b/pom.xml
@@ -29,12 +29,28 @@
   
   <dependencies>
   
-  <dependency>
-			<groupId>com.aventstack</groupId>
-			<artifactId>extentreports</artifactId>
-			<version>4.0.6</version>
-		</dependency>
   
+<!-- https://mvnrepository.com/artifact/com.relevantcodes/extentreports -->
+		<dependency>
+			<groupId>com.relevantcodes</groupId>
+			<artifactId>extentreports</artifactId>
+			<version>2.41.2</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
+		</dependency>
+  <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
+<dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.8.1</version>
+</dependency>
+
+ 
   <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
 <dependency>
     <groupId>io.github.bonigarcia</groupId>
@@ -71,12 +87,7 @@
     <scope>test</scope>
 </dependency>
 
-<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports version 5-->
-<dependency>
-    <groupId>com.aventstack</groupId>
-    <artifactId>extentreports</artifactId>
-    <version>${version}</version>
-</dependency>
+
 
 
  <!-- https://mvnrepository.com/artifact/org.testng/testng -->
@@ -117,13 +128,7 @@
     <artifactId>poi-excelant</artifactId>
     <version>4.1.0</version>
 </dependency>
-    <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
-<dependency>
-    <groupId>commons-io</groupId>
-    <artifactId>commons-io</artifactId>
-    <version>2.6</version>
-</dependency>
-
+   
   <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
 <dependency>
     <groupId>org.apache.poi</groupId>
@@ -131,7 +136,7 @@
     <version>4.1.2</version>
 </dependency>
     
-    <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+  
 
   </dependencies>
 </project>
